# FusionAL-Recall

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MAINTENANCE.md  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/agents/: domain.md
docs/superpowers/plans/: 2026-07-07-notion-sync.md
docs/superpowers/specs/: 2026-07-07-notion-sync-design.md
recall/: __init__.py  db.py  embeddings.py  migrate.py  models.py  notion_sync.py  server.py
tests/: conftest.py  test_db.py  test_migration.py  test_notion_sync.py  test_server.py
