[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusional-recall"
version = "0.1.0"
description = "FusionAL Recall — Semantic search over solved-issues registry via MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jonathan Melton", email = "jrm@fusional.dev" }]
keywords = ["mcp", "semantic-search", "solved-issues", "registry", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "fastmcp>=1.27.1",
    "mcp>=1.1.0",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0"]

[project.scripts]
recall = "recall.server:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
