[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusional-recall"
version = "0.1.0"
description = "Semantic search MCP server for the FusionAL SOLVED-ISSUES registry"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jonathan Melton" }]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.0",
    "fastmcp>=0.1.0",
    "fastembed>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0,<2.14.0",
    "pydantic-core==2.47.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
fusional-recall = "recall.server:main"

[tool.hatch.build.targets.wheel]
packages = ["recall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
